--- a/Software_Innocation_for_Dual_Screen_Notebook/Software_Innocation_for_Dual_Screen_Notebook.csproj
+++ b/Software_Innocation_for_Dual_Screen_Notebook/Software_Innocation_for_Dual_Screen_Notebook.csproj
@@ -133,6 +133,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\download.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
