--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/KeyStrokes.csproj
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/KeyStrokes.csproj
@@ -127,6 +127,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Resource Include="Font\segoe-mdl2-assets.ttf" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
